fix pagination on mobile devices

--- a/app/components/Filter/_filter__small.scss
+++ b/app/components/Filter/_filter__small.scss
@@ -51,7 +51,7 @@ $filter-width: 65%;
     border-radius: 999px;
     color: $filter-color;
     font-weight: $font-light;
-    font-size: $font-size-14;
+    font-size: $font-size-16;
     padding: 6px 0 8px;
     background: $filter-field-background;
     border: 0;
