--- a/app/components/Pagination/_pagination.scss
+++ b/app/components/Pagination/_pagination.scss
@@ -13,7 +13,7 @@
     transition: background-color .3s, transform 0.1s ease-out;
     border: 1px solid $background-color-tertiary;
     background-color: $background-color-tertiary;
-    margin: 0 4px;
+    margin: 0 2px;
     cursor: pointer;
     border-radius: 50px;
 
@@ -28,10 +28,11 @@
         outline: none;
       }
     }
-
-    &:hover:not(.pagination__number--active) {
-      background-color: $background-color-primary;
-      transform: translate3d(0, -5px, 0);
+    @media ( min-width: $breakpoint-desktop ) {
+      &:hover:not(.pagination__number--active) {
+        background-color: $background-color-primary;
+        transform: translate3d(0, -5px, 0);
+      }
     }
   }
 }
